--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "electron-updater": "^4.3.5",
+    "shoyo": "^0.1.4-alpha",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
     "vue": "^3.0.5",
@@ -34,7 +35,6 @@
     "reflect-metadata"
   ],
   "devDependencies": {
-    "reflect-metadata": "^0.1.13",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -51,7 +51,9 @@
     "eslint-config-prettier": "^8.1.0",
     "fs-extra": "^9.0.1",
     "magic-string": "^0.25.7",
+    "reflect-metadata": "^0.1.13",
     "rollup": "^2.38.5",
+    "sass": "^1.32.8",
     "tslib": "^1.14.1",
     "typescript": "^4.1.2",
     "vite": "^2.0.4"
