--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "fs-extra",
     "sqlite3",
     "typeorm",
-    "reflect-metadata"
+    "reflect-metadata",
+    "electron-devtools-installer"
   ],
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
@@ -56,7 +57,9 @@
     "sass": "^1.32.8",
     "tslib": "^1.14.1",
     "typescript": "^4.1.2",
-    "vite": "^2.0.4"
+    "vite": "^2.0.4",
+    "electron-devtools-installer": "^3.1.1",
+    "@types/electron-devtools-installer": "^2.2.0"
   },
   "optionalDependencies": {
     "@types/node": "^14.14.7",
